# pancakesBASIC

./: .gitignore  BNF.txt  CMakeLists.txt  README.md  compile_commands.json  main.cpp
examples/: input.bas  print.bas  print2.bas
pancakes/basic/: AST.cppm  compiler.cppm  interpreter.cppm  keywords.cppm  lexer.cppm  parser.cppm  symbols.cppm  token.cppm  tokentype.cppm
pancakes/basic/settings/: settings.cppm
runtime/: config.h.in  pancakes_runtime.cpp
source/: main.cpp
source/pancakes/basic/core/: AST.cppm  parser.cppm
source/pancakes/execution/: compiler.cppm  interpreter.cppm
src/: main.cpp
src/pancakes/basic/core/: AST.cppm  parser.cppm  visitor.cppm
src/pancakes/basic/frontend/: keywords.cppm  lexer.cppm  tokentype.cppm  util.cppm
src/pancakes/basic/settings/: settings.cppm
src/pancakes/execution/: compiler.cppm  interpreter.cppm
